# linewise

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  cli-reference.md  colors.md  commands.md  gloss.md  installation.md  interactive.md  introduction.md  preset-format.md  presets.md  quickstart.md  record-formats.md
presets/: README.md  ascii85.toml  base64.toml  hex.toml  jwt.toml  z85.toml
src/: analysis.rs  commands.rs  config.rs  interactive.rs  main.rs  preset.rs  records.rs
