[package]
name = "linewise"
version = "0.3.0"
edition = "2021"
description = "Pattern analysis and transformation tool for record-oriented data"
license = "BSD-2-Clause"
repository = "https://github.com/monokrome/linewise"
authors = ["monokrome"]
keywords = ["cli", "binary", "analysis", "hex", "transform"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lw"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process"] }

# Utilities
rand = "0.8"
base85 = "2"
base64 = "0.22"
hex = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
